--- a/public/style.css
+++ b/public/style.css
@@ -1,13 +1,48 @@
 body {
   margin: 0;
+  background-color: rgb(90, 143, 196);
 }
 #navbar {
-  background-color: black;
+  background-color: rgb(184, 135, 56);
+  height: 50px;
   display: flex;
   align-items: center;
+  justify-content: center;
   color: white;
+  font-size: larger;
 }
 
 #puppyCards {
+  display: flex;
+  width: 200px;
+  margin: 20px;
+}
+
+#puppyCard {
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  border: 1px;
+  border-style: solid;
+  font-family: Verdana;
+  font-size: x-small;
+  background-color: wheat;
+}
+/* #seeDetailsBtn {
+  position:sticky;
+  bottom: 0;
+} */
+#puppyPage {
+  margin: 0;
+  background-color: rgb(90, 143, 196);
+}
+
+#dogDetails {
+  margin: 0;
+  font-family: Verdana;
+  justify-content: center;
+}
+
+#search-view {
   margin: 20px;
 }
